syntax = "proto3";

package tsf.test.helloworld;
option go_package = ".;testdata";

// The greeting service definition.
service Greeter {
  // Sends a SayHello greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  // Sends a SayHello greeting by Stream
  rpc SayHelloStream(stream HelloRequest) returns (stream HelloReply) {};
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}